# Mimir

./: CMakeLists.txt  Cargo.toml  LICENSE
compiler/: main.c
compiler/lib/: CMakeLists.txt  file_system.h
